[package]
name = "jup_cache_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7" }
axum-macros = "0.4"
base64 = "0.22"
bs58 = "0.5"
chrono = "0.4"
futures = "0.3"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
solana-account-decoder-client-types = "2"
solana-client = { version = "2" }
solana-program = { version = "2" }
solana-pubsub-client = "2"
solana-sdk = { version = "2" }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
